small update index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="row" style="background-color: #073763;">
         <div class="column-50"><h1>Sven Bouman</h1></div>
         <div class="column-50"><nav>
-            <a target="_blank" href="https://onderwijs.kevin51.nl">Onderwijs</a>
+            <a href="https://onderwijs.kevin51.nl">Onderwijs</a>
         </nav></div>
         </div>
     </header>
