small update index.html
An update fixing color issue that may occure on mobile phones in dark mode. Font size issue NOT resolved.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             padding: 5px 10px;
             font-family: 'lato';
             font-size: 18px;
-            background-color: #ffffff;
+            background-color: none;
             color: #073763;
             text-decoration: none;
             font-weight: bold;
@@ -165,7 +165,7 @@
         <div class="row" style="background-color: #073763;">
         <div class="column-50"><h1>Sven Bouman</h1></div>
         <div class="column-50"><nav>
-            <a href="https://onderwijs.kevin51.nl">Onderwijs</a>
+            <a target="_blank" href="https://onderwijs.kevin51.nl">Onderwijs</a>
         </nav></div>
         </div>
     </header>
