--- a/index.html
+++ b/index.html
@@ -171,20 +171,34 @@
     </header>
     <main>
         <p class="text">
-            Hi, ik ben Sven en dit is mijn plekje op het internet. Hier kan je kennis met mij maken, etc. Neem een kijkje rond en geniet. Ik moet daarbij wel zeggen dat een groot gedeelte nog in aanbouw is, dus de ervaring is nog gelimiteerd.
+            Hi, ik ben Sven en dit is mijn plekje op het internet. 
+            Hier kan je kennis met mij maken, etc. Neem een kijkje rond en geniet. 
+            Ik moet daarbij wel zeggen dat een groot gedeelte nog in aanbouw is, dus de ervaring is nog gelimiteerd.
         </p>
         <p class="text" style="font-style:italic">~Sven Bouman</p>
         <div style="display:flex;border: 3px solid #073763; border-radius: 0px;padding: 15px 15px;">
             <div style="flex:80%;padding-right:10px;">
             <h2 style="margin: 0px 0px 10px 0px; font-weight: bold;color:#073763;font-family: 'Montserrat';">Onderwijs</h2>
-            <p>In het onderdeel onderwijs praat ik over mijn ambitie om later les te geven en hoe ik dit doel ga bereiken. Dit doe ik in de vorm van een blog waarbij ik het ga hebben over toelatingseisen en andere dingen die handig zijn om te weten als je ook het onderwijs in wilt. Dit is ook gewoon een blog om mijn ervaringen te delen en terug te blikken op mijn keuzes.</p>
+            <p>
+                In het onderdeel onderwijs praat ik over mijn ambitie om later les te geven en hoe ik dit doel ga bereiken. 
+                Dit doe ik in de vorm van een blog waarbij ik het ga hebben over toelatingseisen en andere dingen die handig zijn om te weten als je ook het onderwijs in wilt. 
+                Dit is ook gewoon een blog om mijn ervaringen te delen en terug te blikken op mijn keuzes.
+            </p>
             </div>
             <div style="flex: 20%"><img src="https://images0.persgroep.net/rcs/a3llsdVchxprHcxircnkfIinX00/diocontent/168104338/_fitwidth/694/?appId=21791a8992982cd8da851550a453bd7f&quality=0.8" alt="Klaslokaal in basisschool" style="width: 100%;"></div>        
         </div>
         <a class="button" style="display: flex; border-top: 0px;" href="https://onderwijs.kevin51.nl">Ga naar de blog >>></a>
         <div style="margin: 20px 10px;">
             <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over kevin51.nl</h2>
-            <p>Zoals wellicht is opgevallen is mijn naam niet Kevin. Het kan dus zijn dat je je afvraagt waarom ik het domein kevin51.nl gebruik. Het antwoord daarvoor is niet dat ik het domein van iemand anders gebruik, maar dat Kevin een bijnaam is voor mij. Dit is een bijnaam die vooral door vrienden wordt gebruikt en is dus een soort van alternatieve personaliteit geworden. Het getal 51 heeft te maken met mijn de eerste letter van mijn voor- en achternaam. De combinatie hiervan is SB. SB, of eigenlijk Sb, is het teken van de stof antimoon in het periodiek systeem, waarvan het atoomnummer 51 is. Dat is dus de reden waarom het kevin51.nl is.</p>
+            <p>
+                Zoals wellicht is opgevallen is mijn naam niet Kevin. 
+                Het kan dus zijn dat je je afvraagt waarom ik het domein kevin51.nl gebruik. 
+                Het antwoord daarvoor is niet dat ik het domein van iemand anders gebruik, maar dat Kevin een bijnaam is voor mij. 
+                Dit is een bijnaam die vooral door vrienden wordt gebruikt en is dus een soort van alternatieve personaliteit geworden. 
+                Het getal 51 heeft te maken met mijn de eerste letter van mijn voor- en achternaam. 
+                De combinatie hiervan is SB. SB, of eigenlijk Sb, is het teken van de stof antimoon in het periodiek systeem, waarvan het atoomnummer 51 is. 
+                Dat is dus de reden waarom het kevin51.nl is.
+            </p>
         </div>
     </main>
 </body>
