--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@
         </div>
     </header>
     <main>
-        <p class="text">
-            Hi, ik ben Sven en dit is mijn plekje op het internet. 
-            Hier kan je kennis met mij maken, etc. Neem een kijkje rond en geniet. 
-            Ik moet daarbij wel zeggen dat een groot gedeelte nog in aanbouw is, dus de ervaring is nog gelimiteerd.
-        </p>
-        <p class="text" style="font-style:italic">~Sven Bouman</p>
+        <div class="text">
+            <p>
+                Hi, ik ben Sven en dit is mijn plekje op het internet. 
+                Hier kan je kennis met mij maken, etc. Neem een kijkje rond en geniet. 
+                Ik moet daarbij wel zeggen dat een groot gedeelte nog in aanbouw is, dus de ervaring is nog gelimiteerd.
+            </p>
+            <p style="font-style:italic">~Sven Bouman</p>
+        </div>
         <div style="display:flex;border: 3px solid #073763; border-radius: 0px;padding: 15px 15px;">
             <div style="flex:80%;padding-right:10px;">
             <h2 style="margin: 0px 0px 10px 0px; font-weight: bold;color:#073763;font-family: 'Montserrat';">Onderwijs</h2>
@@ -186,10 +188,10 @@
                 Dit is ook gewoon een blog om mijn ervaringen te delen en terug te blikken op mijn keuzes.
             </p>
             </div>
-            <div style="flex: 20%"><img src="https://images0.persgroep.net/rcs/a3llsdVchxprHcxircnkfIinX00/diocontent/168104338/_fitwidth/694/?appId=21791a8992982cd8da851550a453bd7f&quality=0.8" alt="Klaslokaal in basisschool" style="width: 100%;"></div>        
+            <div style="flex: 20%"><a href="https://images0.persgroep.net/rcs/a3llsdVchxprHcxircnkfIinX00/diocontent/168104338/_fitwidth/694/?appId=21791a8992982cd8da851550a453bd7f&quality=0.8" target="_blank"><img src="PICTURES/IMG-DEL-1.png" onerror="this.src='PICTURES/IMG-NB.png';" style="width: 100%;"></a></div>        
         </div>
         <a class="button" style="display: flex; border-top: 0px;" href="https://onderwijs.kevin51.nl">Ga naar de blog >>></a>
-        <div style="margin: 20px 10px;">
+        <div class="text">
             <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over kevin51.nl</h2>
             <p>
                 Zoals wellicht is opgevallen is mijn naam niet Kevin. 
