--- a/index.html
+++ b/index.html
@@ -6,160 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <style type="text/css">
-
-        .montserrat-bold {
-            font-family: "Montserrat", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 700;
-            font-style: normal;
-        }
-
-        .lato-regular {
-            font-family: "Lato", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        body {
-            color: black;
-            font-family: 'lato';
-            margin: 1.6rem auto;
-            max-width: 60rem;
-        }
-
-        img {
-            border-radius: 5px;
-            width:100%;
-        }
-
-        .row {
-            display: flex;
-        }
-
-        .column-50 {
-            flex: 50%;
-        }
-
-        body > header h1 {
-            color: #ffffff;
-            margin-left: 15px;
-        }
-
-        h1 {
-            font-family: 'montserrat';
-        }
-
-        h2 {
-            font-family: 'lato';
-            font-weight: bold;
-        }
-
-        time {
-            font-family: 'lato';
-            font-weight: bold;
-            color: #3f3f3f;
-        }
-
-        article {
-            border-bottom: 1px solid #aaa;
-            margin-bottom: 100px;
-            padding-bottom: 50px;
-        }
-
-        article:last-child {
-            border-bottom: 0;
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
-
-        article header {
-            color: #3f3f3f;
-            font-size: 16px;
-            font-weight: bold;
-            margin-bottom: 5px;
-            margin-top: 10px;
-        }
-
-        article h1 {
-            font-size: 28px;
-            line-height: 33.6px;
-        }
-
-        article h1 a {
-            color: black;
-        }
-
-        p, article > a {
-            font-feature-settings: 'liga', 'kern';
-            font-size: 18px;
-            line-height: 25px;
-            margin: 0 0 20px;
-        }
-
-        article main h2 {
-            font-size: 20px;
-            line-height: 22px;
-            margin-top: 16px;
-            margin-bottom: 8px;
-        }
-
-        footer {
-            border-top: 1px solid #3f3f3f;
-            margin-top: 25px;
-            padding-top: 10px;
-        }
-
-        article a, footer a {
-            color: #073763;
-            font-style: italic;
-        }
-
-        nav {
-            height: 100%;
-            text-align: right;
-            margin: auto 1.2em;
-            height: 81.88px
-        }
-
-        nav > a {
-            padding: 5px 10px;
-            margin: 1.2em 2px;
-            font-family: 'lato';
-            font-size: 18px;
-            background-color: #073763;
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: bold;
-            border: 3px solid #ffffff;
-            display: inline-block;
-            vertical-align: middle;
-
-        }
-
-        .button {
-            padding: 5px 10px;
-            font-family: 'lato';
-            font-size: 18px;
-            background-color: none;
-            color: #073763;
-            text-decoration: none;
-            font-weight: bold;
-            border: 3px solid #073763;
-            display: inline-block;
-            vertical-align: middle;
-
-        }
-        
-        header {
-            margin-bottom: 20px;
-        }
-
-        .text {
-            margin: 0 10px 20px 10px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="https://bron.kevin51.nl/stijl/sven-bouman.css">
 </head>
 <body>
     <header>
@@ -173,9 +20,12 @@
     <main>
         <div class="text">
             <p>
-                Hi, ik ben Sven en dit is mijn plekje op het internet. 
-                Hier kan je kennis met mij maken, etc. Neem een kijkje rond en geniet. 
-                Ik moet daarbij wel zeggen dat een groot gedeelte nog in aanbouw is, dus de ervaring is nog gelimiteerd.
+                Het is een heel avontuur, het leven.
+                En elk avontuur is uniek.
+                Op deze website vind je hoe ik mijn avontuur beleef.
+                Ik weet alleen nog niet wat er allemaal in mijn avontuur gebeurd, dus je vindt hier enkel de geschiedenis en voorspellingen. 
+                Veel meer kan ik niet bieden.
+                Neem gerust een kijkje en beleef dit avontuur met mij mee.
             </p>
             <p style="font-style:italic">~Sven Bouman</p>
         </div>
@@ -188,9 +38,18 @@
                 Dit is ook gewoon een blog om mijn ervaringen te delen en terug te blikken op mijn keuzes.
             </p>
             </div>
-            <div style="flex: 20%"><a href="https://images0.persgroep.net/rcs/a3llsdVchxprHcxircnkfIinX00/diocontent/168104338/_fitwidth/694/?appId=21791a8992982cd8da851550a453bd7f&quality=0.8" target="_blank"><img src="PICTURES/IMG-DEL-1.png" onerror="this.src='PICTURES/IMG-NB.png';" style="width: 100%;"></a></div>        
+            <div style="flex: 20%"><a href="https://images0.persgroep.net/rcs/a3llsdVchxprHcxircnkfIinX00/diocontent/168104338/_fitwidth/694/?appId=21791a8992982cd8da851550a453bd7f&quality=0.8" target="_blank"><img src="https://bron.kevin51.nl/media/del.png" onerror="this.src='media/nb.png';" style="width: 100%;"></a></div>        
         </div>
         <a class="button" style="display: flex; border-top: 0px;" href="https://onderwijs.kevin51.nl">Ga naar de blog >>></a>
+        <div class="text">
+            <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Archief</h2>
+            <p>
+                Je geschiedenis kan je op verschillende manieren vastleggen. 
+                Ik heb er voor gekozen om delen van mijn geschiedenis te delen. 
+                Wil je mijn geschiedenis ontdekken? 
+                <a href="https://bron.kevin51.nl" style="color:#073763;font-style: italic;">Ga dan naar het archief >>></a>
+            </p>
+        </div>
         <div class="text">
             <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over kevin51.nl</h2>
             <p>
@@ -199,7 +58,8 @@
                 Het antwoord daarvoor is niet dat ik het domein van iemand anders gebruik, maar dat Kevin een bijnaam is voor mij. 
                 Dit is een bijnaam die vooral door vrienden wordt gebruikt en is dus een soort van alternatieve personaliteit geworden. 
                 Het getal 51 heeft te maken met mijn de eerste letter van mijn voor- en achternaam. 
-                De combinatie hiervan is SB. SB, of eigenlijk Sb, is het teken van de stof antimoon in het periodiek systeem, waarvan het atoomnummer 51 is. 
+                De combinatie hiervan is SB. 
+                SB, of eigenlijk Sb, is het teken van de stof antimoon in het periodiek systeem, waarvan het atoomnummer 51 is. 
                 Dat is dus de reden waarom het kevin51.nl is.
             </p>
         </div>
