--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://bron.kevin51.nl/stijl/sven-bouman.css">
 </head>
-<body>
+<body style="margin:20px 10px">
     <header>
         <div class="row" style="background-color: #073763;">
         <div class="column-50"><h1>Sven Bouman</h1></div>
@@ -18,7 +18,7 @@
         </div>
     </header>
     <main>
-        <div class="text">
+        <div>
             <p>
                 Het is een heel avontuur, het leven.
                 En elk avontuur is uniek.
@@ -29,28 +29,38 @@
             </p>
             <p style="font-style:italic">~Sven Bouman</p>
         </div>
-        <div style="display:flex;border: 3px solid #073763; border-radius: 0px;padding: 15px 15px;">
-            <div style="flex:80%;padding-right:10px;">
-            <h2 style="margin: 0px 0px 10px 0px; font-weight: bold;color:#073763;font-family: 'Montserrat';">Onderwijs</h2>
-            <p>
-                In het onderdeel onderwijs praat ik over mijn ambitie om later les te geven en hoe ik dit doel ga bereiken. 
-                Dit doe ik in de vorm van een blog waarbij ik het ga hebben over toelatingseisen en andere dingen die handig zijn om te weten als je ook het onderwijs in wilt. 
-                Dit is ook gewoon een blog om mijn ervaringen te delen en terug te blikken op mijn keuzes.
-            </p>
+        <div class="row">
+            <div style="width: 33%; margin-right: 25px;background-color: #f3f3f3; padding: 0px 10px;">
+                <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over</h2>
+                <p>
+                    Het kan zijn dat je heel geïnteresseerd ben over deze website.
+                    Dan kan je doormiddel van de onderstaande knop kan je meer over deze website vinden of scroll simpelweg naar beneden.
+                    Je vindt er informatie over de naam en waarom ik deze werbsite heb gemaakt.
+                    Ook vind je hier een structuur van de website. Mocht je meer willen weten? Klik hieronder.
+                </p>
+                <a class="button" style="width:90%;margin-bottom:10px;padding-bottom: 0px;" href="#over"><img src="media/arrow-down.png" style="width:fit-content(100%)"></a>
             </div>
-            <div style="flex: 20%"><a href="https://images0.persgroep.net/rcs/a3llsdVchxprHcxircnkfIinX00/diocontent/168104338/_fitwidth/694/?appId=21791a8992982cd8da851550a453bd7f&quality=0.8" target="_blank"><img src="https://bron.kevin51.nl/media/del.png" onerror="this.src='media/nb.png';" style="width: 100%;"></a></div>        
+            <div style="width: 33%; margin-right: 25px;background-color: #f3f3f3; padding: 0px 10px;">
+                <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Onderwijs</h2>
+                <p>
+                    In het onderdeel onderwijs praat ik over mijn ambitie om later les te geven en hoe ik dit doel ga bereiken. 
+                    Dit doe ik in de vorm van een blog waarbij ik het ga hebben over toelatingseisen en andere dingen die handig zijn om te weten als je ook het onderwijs in wilt. 
+                    Dit is ook gewoon een blog om mijn ervaringen te delen en terug te blikken op mijn keuzes.
+                </p>
+                <a class="button" style="width:90%; margin-bottom:10px" href="https://onderwijs.kevin51.nl">Ga naar de blog >>></a>
+            </div>
+            <div style="width: 33%;background-color: #f3f3f3; padding: 0px 10px;">
+                <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Archief</h2>
+                <p>
+                    Het archief is een plek voor mij om bestanden beschikbaar te maken en te delen met anderen.
+                    Een gedeelte van het archief is openbaar en beschikbaar voor iedereen die het wil bekijken.
+                    Een ander gedeelte is niet beschikbaar en wordt gebruik voor persoonlijke projecten en herinneringen.
+                    Via de onderstaande knop kan je zelf bekijken wat er in het archief staat.
+                </p>
+                <a class="button" style="width:90%;margin-bottom:10px" href="https://bron.kevin51.nl">Bekijk het archief >>></a>
+            </div>
         </div>
-        <a class="button" style="display: flex; border-top: 0px;" href="https://onderwijs.kevin51.nl">Ga naar de blog >>></a>
-        <div class="text">
-            <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Archief</h2>
-            <p>
-                Je geschiedenis kan je op verschillende manieren vastleggen. 
-                Ik heb er voor gekozen om delen van mijn geschiedenis te delen. 
-                Wil je mijn geschiedenis ontdekken? 
-                <a href="https://bron.kevin51.nl" style="color:#073763;font-style: italic;">Ga dan naar het archief >>></a>
-            </p>
-        </div>
-        <div class="text">
+        <div class="text" id="over">
             <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over kevin51.nl</h2>
             <p>
                 Zoals wellicht is opgevallen is mijn naam niet Kevin. 
@@ -62,6 +72,7 @@
                 SB, of eigenlijk Sb, is het teken van de stof antimoon in het periodiek systeem, waarvan het atoomnummer 51 is. 
                 Dat is dus de reden waarom het kevin51.nl is.
             </p>
+            <img src="media/idev-sep2024.png" onerror="this.src='media/nb.png';"/>
         </div>
     </main>
 </body>
