--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://bron.kevin51.nl/stijl/sven-bouman.css">
 </head>
+<body>
 <body style="margin:20px 10px">
     <header>
         <div class="row" style="background-color: #073763;">
@@ -75,5 +76,6 @@
             <img src="media/idev-sep2024.png" onerror="this.src='media/nb.png';"/>
         </div>
     </main>
+    </body>
 </body>
 </html>
