--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </p>
             <p>
                 Het domein kevin51.nl had ik al een tijdje in bezit, naast een eerder domein dat ik had, genaamd <a href="https://www.godaddy.com/nl-nl/domainsearch/find?domainToCheck=sector51.nl#" target="_blank">sector51.nl</a>. 
-                De naam kevin51 komt van twee dingen: 51 is mijn geluksgetal en Kevin is een bijnaam die is ontstaan in mijn middelbare schooltijd. 
+                De naam kevin51 komt van twee dingen: 51 is mijn favoriete getal en Kevin is een bijnaam die is ontstaan in mijn middelbare schooltijd. 
                 Ik vond het interessant om deze twee delen te combineren tot een 'merknaam'. 
                 Ik heb ook een aantal gerelateerde versies die ik kan gebruiken.
             </p>
