--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -35,7 +35,7 @@
         </header>
         <main>
             <p>In deze eerste aflevering probeert Sven de zelfgemaakte appelbollen van zijn klasgenote, Linda. En cameraprofessional Thijs legt dit allemaal vast!</p>
-            <video width="100%" controls>
+            <video width="100%" controls controlsList="nodownload" oncontextmenu="return false;">
                 <source src="https://bron.kevin51.nl/media/kevin-eet-alles/ep1-appelbol.mp4" type="video/mp4">
             </video>
             <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries <br>
