--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Kevin eet alles</title>
+    <title>Kevin eet alles!</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
