--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -31,6 +31,18 @@
     <p>In deze serie zal Sven eten in zijn mond stoppen en vertellen wat hij ervan vindt.</p>
     <article style="color: #f3f3f3; border-bottom: 0;">
         <header>
+            <h1 style="color: #f3f3f3">Mystery broodbeleg</h1>
+        </header>
+        <main>
+            <p>Sven opent zijn broodtrommel en wat ziet hij? Broodbeleg wat hij nog nooit heeft gehad! Dit mystery broodbeleg verdient daarom een echte TASTE TEST!</p>
+            <video width="100%" controls controlsList="nodownload" oncontextmenu="return false;">
+                <source src="https://bron.kevin51.nl/media/kevin-eet-alles/ep2-broodbeleg_gehaktbal.mp4" type="video/mp4">
+            </video>
+            <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries.</em></p>
+        </main>
+    </article>
+    <article style="color: #f3f3f3; border-bottom: 0;">
+        <header>
             <h1 style="color: #f3f3f3">De appelbol</h1>
         </header>
         <main>
@@ -38,8 +50,8 @@
             <video width="100%" controls controlsList="nodownload" oncontextmenu="return false;">
                 <source src="https://bron.kevin51.nl/media/kevin-eet-alles/ep1-appelbol.mp4" type="video/mp4">
             </video>
-            <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries <br>
-                    Appelbollen zijn bereid door Linda Opdam</em></p>
+            <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries. <br>
+                    Appelbollen zijn bereid door Linda Opdam.</em></p>
         </main>
     </article>
     <footer>
