--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -29,7 +29,7 @@
         </div>
     </header>
     <p>In deze serie zal Sven eten in zijn mond stoppen en vertellen wat hij ervan vindt.</p>
-    <article style="color: #f3f3f3; border-bottom: 0;">
+    <article style="color: #f3f3f3;">
         <header>
             <h1 style="color: #f3f3f3">Mystery broodbeleg</h1>
         </header>
