--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="https://bron.kevin51.nl/stijl/sven-bouman.css">
 </head>
 <body>
-    <header>
-        <div class="row" style="background-color: #073763;">
+    <header style="width: max;">
+        <div class="row" style="background-color: #3f3f3f;border: 3px solid #f3f3f3;">
         <div class="column-50"><h1>Sven Bouman</h1></div>
         <div class="column-50"><nav>
-            <a href="https://onderwijs.kevin51.nl">Onderwijs</a>
         </nav></div>
         </div>
     </header>
@@ -30,8 +29,8 @@
             <p style="font-style:italic">~Sven Bouman</p>
         </div>
         <div class="row">
-            <div style="width: 33%; margin-right: 25px;background-color: #f3f3f3; padding: 0px 10px;">
-                <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over</h2>
+            <div style="width: 33%; margin-right: 25px;border: 3px solid #f3f3f3; padding: 0px 10px;">
+                <h2 style="font-weight: bold;font-family: 'Montserrat'; margin-bottom: 10px;">Over</h2>
                 <p>
                     Het kan zijn dat je heel geïnteresseerd ben over deze website.
                     Dan kan je doormiddel van de onderstaande knop kan je meer over deze website vinden of scroll simpelweg naar beneden.
@@ -40,8 +39,8 @@
                 </p>
                 <a class="button" style="width:90%;margin-bottom:10px;padding-bottom: 0px;" href="#over"><img src="media/arrow-down.png" style="width:fit-content(100%)"></a>
             </div>
-            <div style="width: 33%; margin-right: 25px;background-color: #f3f3f3; padding: 0px 10px;">
-                <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Onderwijs</h2>
+            <div style="width: 33%; margin-right: 25px;border: 3px solid #f3f3f3; padding: 0px 10px;">
+                <h2 style="font-weight: bold;font-family: 'Montserrat'; margin-bottom: 10px;">Onderwijs</h2>
                 <p>
                     In het onderdeel onderwijs praat ik over mijn ambitie om later les te geven en hoe ik dit doel ga bereiken. 
                     Dit doe ik in de vorm van een blog waarbij ik het ga hebben over toelatingseisen en andere dingen die handig zijn om te weten als je ook het onderwijs in wilt. 
@@ -49,8 +48,8 @@
                 </p>
                 <a class="button" style="width:90%; margin-bottom:10px" href="https://onderwijs.kevin51.nl">Ga naar de blog >>></a>
             </div>
-            <div style="width: 33%;background-color: #f3f3f3; padding: 0px 10px;">
-                <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Archief</h2>
+            <div style="width: 33%;border: 3px solid #f3f3f3; padding: 0px 10px;">
+                <h2 style="font-weight: bold;font-family: 'Montserrat'; margin-bottom: 10px;">Archief</h2>
                 <p>
                     Het archief is een plek voor mij om bestanden beschikbaar te maken en te delen met anderen.
                     Een gedeelte van het archief is openbaar en beschikbaar voor iedereen die het wil bekijken.
@@ -61,7 +60,7 @@
             </div>
         </div>
         <div class="text" id="over">
-            <h2 style="font-weight: bold;color:#073763;font-family: 'Montserrat'; margin-bottom: 10px;">Over kevin51.nl</h2>
+            <h2 style="font-weight: bold;color:#3f3f3f;font-family: 'Montserrat'; margin-bottom: 10px;">Over kevin51.nl</h2>
             <p>
                 Kevin51.nl is een website die ik heb gemaakt om in eerste instantie te oefenen met HTML en CSS, maar ook om delen van mijn leven te delen. 
                 Het is een website waarop ik dingen deel die ik graag wil delen, bestanden op mijn eigen domein zet om via internet bij te kunnen komen en om dingen met vrienden te delen.
