--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -6,9 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,700;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,700;1,700&display=swap&family=Playwrite+NL:wght@100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://bron.kevin51.nl/stijl/kevin-eet-alles.css">
     <style>
         article {
@@ -19,9 +17,9 @@
 
 <body>
     <header style="margin-top: 20px;">
-        <div class="row" style="border: 1.5px solid #f3f3f3;">
+        <div class="row" style="border: 3px solid #f3f3f3;">
             <div class="column">
-                <h1 style="font-size: 45px; margin: 0; margin-left: 7.5px;">Kevin eet alles!</h1>
+                <h1 style="font-size: 45px; margin: 0; margin-left: 7.5px; font-family: playwrite-nl-bold;">kevin eet alles!</h1>
             </div>
             <div class="column" style="height: auto; flex: auto"><img
                     src="https://bron.kevin51.nl/media/kevin51-s51_og-logo.png"
