--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Je vindt er informatie over de naam en waarom ik deze werbsite heb gemaakt.
                     Ook vind je hier een structuur van de website. Mocht je meer willen weten? Klik hieronder.
                 </p>
-                <a class="button" style="width:90%;margin-bottom:10px;padding-bottom: 0px;" href="#over"><img src="media/arrow-down.png" style="width:fit-content(100%)"></a>
+                <a class="button" style="width:90%;margin-bottom:10px;padding-bottom: 0px;" href="#over"><p>Zie hieronder</p></a>
             </div>
             <div style="width: 33%; margin-right: 25px;border: 3px solid #f3f3f3; padding: 0px 10px;">
                 <h2 style="font-weight: bold;font-family: 'Montserrat'; margin-bottom: 10px;">Onderwijs</h2>
@@ -72,7 +72,7 @@
                 Deze heb ik vervolgens ook in een tussenproject getest en nog een aantal keer aangepast.
             </p>
             <p>
-                Het domein kevin51.nl had ik al een tijdje in bezit, naast een eerder domein dat ik had, genaamd <a href="https://www.godaddy.com/nl-nl/domainsearch/find?domainToCheck=sector51.nl#" target="_blank">sector51.nl</a>. 
+                Het domein kevin51.nl had ik al een tijdje in bezit, naast een eerder domein dat ik had, genaamd sector51.nl. 
                 De naam kevin51 komt van twee dingen: 51 is mijn favoriete getal en Kevin is een bijnaam die is ontstaan in mijn middelbare schooltijd. 
                 Ik vond het interessant om deze twee delen te combineren tot een 'merknaam'. 
                 Ik heb ook een aantal gerelateerde versies die ik kan gebruiken.
