--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Je vindt er informatie over de naam en waarom ik deze werbsite heb gemaakt.
                     Ook vind je hier een structuur van de website. Mocht je meer willen weten? Klik hieronder.
                 </p>
-                <a class="button" style="width:90%;margin-bottom:10px;padding-bottom: 0px;" href="#over"><p>Zie hieronder</p></a>
+                <a class="button" style="width:90%;margin-bottom:10px;padding-bottom: 0px;" href="#over">Zie hieronder</a>
             </div>
             <div style="width: 33%; margin-right: 25px;border: 3px solid #f3f3f3; padding: 0px 10px;">
                 <h2 style="font-weight: bold;font-family: 'Montserrat'; margin-bottom: 10px;">Onderwijs</h2>
