--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -29,6 +29,18 @@
     <p>In deze serie zal Sven eten in zijn mond stoppen en vertellen wat hij ervan vindt.</p>
     <article style="color: #f3f3f3;">
         <header>
+            <h1 style="color: #f3f3f3">De garnaal</h1>
+        </header>
+        <main>
+            <p>Hoppatee! Een lekkere garnaal! Maar hoe voelt de garnaal zich hierbij?</p>
+            <video width="100%" controls controlsList="nodownload" oncontextmenu="return false;">
+                <source src="ep3-garnaal.mp4" type="video/mp4">
+            </video>
+            <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries.</em></p>
+        </main>
+    </article>
+    <article style="color: #f3f3f3;">
+        <header>
             <h1 style="color: #f3f3f3">Mystery broodbeleg</h1>
         </header>
         <main>
