--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -34,7 +34,7 @@
         <main>
             <p>Hoppatee! Een lekkere garnaal! Maar hoe voelt de garnaal zich hierbij?</p>
             <video width="100%" controls controlsList="nodownload" oncontextmenu="return false;">
-                <source src="ep3-garnaal.mp4" type="video/mp4">
+                <source src="https://bron.kevin51.nl/media/kevin-eet-alles/ep3-garnaal.mp4" type="video/mp4">
             </video>
             <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries.</em></p>
         </main>
