--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -6,30 +6,30 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+NL:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://bron.kevin51.nl/stijl/kevin-eet-alles.css">
     <style>
         article {
-            color: #f3f3f3;
+            color: #448375;
         }
     </style>
 </head>
 
 <body>
     <header style="margin-top: 20px;">
-        <div class="row" style="border: 3px solid #f3f3f3;">
+        <div class="row" style="border: 3px solid #448375;">
             <div class="column">
-                <h1 style="font-size: 45px; margin: 0; margin-left: 7.5px; font-family: playwrite-nl-bold;">kevin eet alles!</h1>
+                <h1 style="font-size: 45px; margin: 0; margin-left: 7.5px; font-family: dynapuff-bold;">kevin eet alles!</h1>
             </div>
             <div class="column" style="height: auto; flex: auto"><img
-                    src="https://bron.kevin51.nl/media/kevin51-s51_og-logo.png"
+                    src="https://bron.kevin51.nl/media/kevin-eet-alles/kevin_eet_alles-kevin_51.png"
                     style="width: 60px; border-radius: 0; vertical-align: middle; float: right;"></div>
         </div>
     </header>
     <p>In deze serie zal Sven eten in zijn mond stoppen en vertellen wat hij ervan vindt.</p>
-    <article style="color: #f3f3f3;">
+    <article style="color: #448375;">
         <header>
-            <h1 style="color: #f3f3f3">De garnaal</h1>
+            <h1 style="color: #448375">De garnaal</h1>
         </header>
         <main>
             <p>Hoppatee! Een lekkere garnaal! Maar hoe voelt de garnaal zich hierbij?</p>
@@ -39,9 +39,9 @@
             <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries.</em></p>
         </main>
     </article>
-    <article style="color: #f3f3f3;">
+    <article style="color: #448375;">
         <header>
-            <h1 style="color: #f3f3f3">Mystery broodbeleg</h1>
+            <h1 style="color: #448375">Mystery broodbeleg</h1>
         </header>
         <main>
             <p>Sven opent zijn broodtrommel en wat ziet hij? Broodbeleg wat hij nog nooit heeft gehad! Dit mystery broodbeleg verdient daarom een echte TASTE TEST!</p>
@@ -51,9 +51,9 @@
             <p><em>Deze video is opgenomen en bewerkt door Thijs de Vries.</em></p>
         </main>
     </article>
-    <article style="color: #f3f3f3; border-bottom: 0;">
+    <article style="color: #448375; border-bottom: 0;">
         <header>
-            <h1 style="color: #f3f3f3">De appelbol</h1>
+            <h1 style="color: #448375">De appelbol</h1>
         </header>
         <main>
             <p>In deze eerste aflevering probeert Sven de zelfgemaakte appelbollen van zijn klasgenote, Linda. En cameraprofessional Thijs legt dit allemaal vast!</p>
