--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -19,7 +19,7 @@
     <header style="margin-top: 20px;">
         <div class="row" style="border: 3px solid #448375;">
             <div class="column">
-                <h1 style="font-size: 45px; margin: 0; margin-left: 7.5px; font-family: dynapuff-bold;">kevin eet alles!</h1>
+                <h1 style="font-size: 45px; margin: 0; margin-left: 7.5px; font-family: DynaPuff;">kevin eet alles!</h1>
             </div>
             <div class="column" style="height: auto; flex: auto"><img
                     src="https://bron.kevin51.nl/media/kevin-eet-alles/kevin_eet_alles-kevin_51.png"
