--- a/kevin-eet-alles/index.html
+++ b/kevin-eet-alles/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Kevin eet alles!</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://bron.kevin51.nl/media/kevin-eet-alles/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900" rel="stylesheet">
